chore: en batch med retting av sonar-issues (#2786)